[package]
name = "calypso"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Calypso is a mostly imperative language with some functional influences that is focused on flexibility and simplicity."
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
keywords = ["interpreter"]
categories = ["development-tools", "parser-implementations"]
build = "build.rs"
rust-version = "1.56"

[dependencies]
mimalloc = { version = "0.1.27", optional = true }
calypso_parsing = { path = "libs/calypso_parsing", version = "0.1.0" }
calypso_diagnostic = { path = "libs/calypso_diagnostic", version = "0.1.0" }
calypso_repl = { path = "libs/calypso_repl", version = "0.1.0" }
calypso_base = { path = "libs/calypso_base", version = "0.1.0", default-features = false, features = ["ui"] }
saturnvm = { path = "libs/saturnvm", version = "0.1.0" }
tracing-subscriber = { version = "0.3.2", features = ["parking_lot", "env-filter", "json"] }
once_cell = "1.8.0"
calypso_common = { path = "libs/calypso_common", version = "0.1.0" }
calypso_filety = { path = "libs/calypso_filety", version = "2.0.0" }
calypso_ast = { path = "libs/calypso_ast", version = "0.1.0" }
structopt = "0.3.25"

[features]
default = ["mimalloc", "mimalloc/secure"]

[workspace]
exclude = ["libs/sublib_skeleton"]

[build-dependencies]
vergen = { version = "5.1.18", default-features = false, features = ["build", "cargo", "git", "rustc"] }

# Do not enable with real builds, for benchmarking and debugging only.
# [profile.release]
# debug = true
