[package]
name = "calypso"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Calypso is a mostly imperative language with some functional influences that is focused on flexibility and simplicity."
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
keywords = ["interpreter"]
categories = ["development-tools", "parser-implementations"]
rust-version = "1.66.1"

[dependencies]
mimalloc = { version = "0.1.31", optional = true }
#calypso_parsing = { path = "libs/calypso_parsing", version = "0.1.0" }
#calypso_diagnostic = { path = "libs/calypso_diagnostic", version = "0.1.0" }
calypso_repl = { path = "libs/calypso_repl", version = "0.1.0" }
saturnvm = { path = "libs/saturnvm", version = "0.1.0" }
tracing-subscriber = { version = "0.3.15", features = ["parking_lot", "env-filter", "json"] }
once_cell = "1.15.0"
#calypso_common = { path = "libs/calypso_common", version = "0.1.0" }
calypso_filety = { path = "libs/calypso_filety", version = "3.0.0" }
#calypso_ast = { path = "libs/calypso_ast", version = "0.1.0" }
trycmd = "0.14.10"
clap = { version = "3.2.23", features = ["derive", "env"] }

termcolor = "1.1.3"
atty = "0.2.14"
thiserror = "1.0.24"
eyre = "0.6.7"
ariadne = "0.3.0"
parking_lot = "0.12.1"
lasso = { version = "0.6.0", features = ["multi-threaded"] }
logos = "0.12.1"
itertools = "0.10.5"
chumsky = { git = "https://github.com/zesterer/chumsky.git", features = ["pratt", "label"] }
id-arena = "2.2.1"
index_vec = "0.1.3"
im = "15.1.0"
pretty = "0.12.3"

[features]
default = ["mimalloc", "mimalloc/secure"]

[workspace]
exclude = ["libs/sublib_skeleton"]

# Do not enable with real builds, for benchmarking and debugging only.
# [profile.release]
# debug = true

[[bin]]
name = "calypso"
path = "src/main.rs"
