[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
eyre.workspace = true
lasso = { version = "0.7.3", features = ["multi-threaded"] }
rustc-hash = "2.1.2"
tracing.workspace = true
unicode-ident = "1.0.24"

[dev-dependencies]
pretty_assertions.workspace = true
