[package]
name = "calypso_base"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Base types and utilities for Calypso that don't require any other Calypso crates (excluding calypso_error)"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_base"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"

[dependencies]
lasso = { version = "0.6.0", features = ["multi-threaded"], optional = true }
once_cell = { version = "1.8.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
termcolor = { version = "1.1.2", optional = true }
atty = { version = "0.2.14", optional = true }
# parking_lot = { version = "0.11.1", optional = true }
tracing = "0.1.29"
calypso_error = { path = "../calypso_error", version = "1.0.2" }

[features]
default = ["span", "stream", "symbol", "ui"]
span = []
stream = []
symbol = ["lazy_static", "once_cell", "lasso"]
ui = ["termcolor", "atty"]


# [dev-dependencies]
# proptest = "0.10.1"