[package]
name = "calypso_base"
version = "0.1.1"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Base types and utilities for Calypso that don't require any other Calypso crates (excluding calypso_error)"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_base"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.66.1"

[dependencies]
lasso = { version = "0.6.0", features = ["multi-threaded"], optional = true }
once_cell = { version = "1.15.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }
termcolor = { version = "1.1.3", optional = true }
atty = { version = "0.2.14", optional = true }
# parking_lot = { version = "0.11.1", optional = true }
tracing = "0.1.40"
calypso_error = { path = "../calypso_error", version = "2.0.0" }

[features]
default = ["span", "symbol", "ui", "calypso_interns"]
span = []
symbol = ["lazy_static", "once_cell", "lasso", "span"]
ui = ["termcolor", "atty"]
calypso_interns = ["symbol"]


# [dev-dependencies]
# proptest = "0.10.1"
