[package]
name = "calypso_diagnostic"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Diagnostics for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_diagnostic"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT"

[dependencies]
calypso_base = { path = "../calypso_base", version = "0.1.0" }
calypso_error = { path = "../calypso_error", version = "1.0.0" }
thiserror = "1.0.24"
lazy_static = "1.4.0"
codespan-reporting = "0.11.0"
strfmt = "0.1.6"