[package]
name = "calypso_filety"
version = "2.0.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Binary file type descriptions, parsers, etc. for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_filety"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.56"

[dependencies]
calypso_base = { path = "../calypso_base", default-features = false, features = ["symbol"] }
calypso_error = { path = "../calypso_error", version = "1.0.2" }
anyhow = "1.0.53"
serde = { version = "1.0.134", features = ["derive"] }
bincode = "1.3.3"
nom = "7.1.0"
indexmap = "1.8.0"

# Dependencies for readccff; optional as they're not
# required for the main library.
pretty-hex = { version = "0.2.1", optional = true }

[dev-dependencies]
pretty_assertions = "1.0.0"

[features]
default = []
readccff-deps = ["pretty-hex"]

[[bin]]
name = "readccff"
path = "src/bin/readccff.rs"
required-features = ["readccff-deps"]

[[example]]
name = "ccff_simple"
path = "examples/ccff/simple.rs"
