[package]
name = "calypso_filety"
version = "3.0.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Binary file type descriptions, parsers, etc. for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_filety"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.66.1"

[dependencies]
nom = "7.1.1"
indexmap = "2.2.3"

# Dependencies for readccff; optional as they're not
# required for the main library.
pretty-hex = { version = "0.3.0", optional = true }

[dev-dependencies]
pretty_assertions = "1.3.0"

[features]
default = []
readccff-deps = ["pretty-hex"]

[[bin]]
name = "readccff"
path = "src/bin/readccff.rs"
required-features = ["readccff-deps"]

[[example]]
name = "ccff_simple"
path = "examples/ccff/simple.rs"
