[package]
name = "calypso_opt"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Calypso optimization passes"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_opt"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.66.1"

[dependencies]
calypso_parsing = { path = "../calypso_parsing", version = "0.1.0" }
