[package]
name = "calypso_repl"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "REPL utilities for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_repl"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT"

[dependencies]
rustyline = "7.1.0"
regex = "1.4.3"
