[package]
name = "calypso_util"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "Utilities for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/calypso_util"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
include = ["../../LICENSE-MIT", "../../LICENSE-APACHE"]

[dependencies]
calypso_diagnostic = { path = "../calypso_diagnostic", version = "0.1.0" }
calypso_base = { path = "../calypso_base", version = "0.1.0" }
