[package]
name = "saturnvm"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "A bytecode VM developed for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/saturnvm"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"

[dependencies]
calypso_error = { path = "../calypso_error", version = "1.0.1" }