[package]
name = "saturnvm"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2021"
description = "A bytecode VM developed for Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/libs/saturnvm"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"

[dependencies]
num_enum = "0.7.1"
saturnvm_macros = { path = "../saturnvm_macros", version = "0.1.0" }
