[package]
name = "sublib_skeleton"
version = "0.1.0"
authors = ["ThePuzzlemaker <tpzker@thepuzzlemaker.info>"]
edition = "2018"
description = "Skeleton for sub-libraries within Calypso"
readme = "README.md"
homepage = "https://github.com/calypso-lang/calypso/tree/main/sublib_skeleton"
repository = "https://github.com/calypso-lang/calypso/"
license = "MIT"

[dependencies]
